<resources>
    <string name="app_name">SMS Dictionary</string>
    <string name="text_next">Next</string>
    <string name="text_start">Start</string>
    <string name="text_next_fragment">Next fragment</string>
    <string name="text_next_activity">Next Activity</string>
    <string name="text_secondary_fragment">This is Secondary Fragment</string>
    <string name="text_mainactivity">MainActivity</string>
    <string name="text_back">Back</string>
    <string name="text_secondaryactivity">SecondaryActivity</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="username">UserName/Mobile No</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="firstname">FirstName</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="messages">Messages</string>
    <string name="spam_messages">Spam Messages</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_message">Search messages...</string>
    <string name="no_appointment_found">No Data Found</string>
    <string name="add_keyword">Add Keyword</string>
    <string name="view_keywords">View Keywords</string>
    <string name="type_your_keyword">Type your keyword</string>
    <string name="add">Add</string>
    <string name="delete_keyword">Delete Keyword</string>
</resources>